# lang-mhr

./: .gitignore  .gitignore.orig  .glottologid.txt  AnalysisWithOldOrthography.md  CITATION.cff  Links.md  Makefile.am  Makefile.in  README  README.markdown  README.md  TestDiary.jspwiki  _config.yml  acronyms-stems-fst-src.md  adjectives-affixes-fst-src.md  autogen.sh  clitics-affixes-fst-src.md  clitics-affixes.md  compounding-fst-src.md  configure.ac  disambiguator-cg3-src.md  disambiguator-syntax.md  exceptions-stems-fst-src.md  functions-cg3-src.md  giella-mhr.pc.in  grammarchecker-grammarcheckers-tools.md  index-header.md  index.md  manifest.toml  manifest.toml.in  mhr-propernouns-stems-fst-src.md  mhr.md  nouns-affixes-fst-src.md  numbers-affixes-fst-src.md  numerals-stems-fst-src.md  phonology-fst-src.md  phonology-morphology.md  pronouns-affixes-fst-src.md  propernouns-affixes-fst-src.md  propernouns-affixes.md  (+55 more)
src/: Makefile  Makefile.am  case.regex  mhr-lex.txt  mhr-num.txt  noun-mhr-lex.txt  pp-mhr-lex.txt  twol-mhr.txt
src/cg3/: Makefile.am  dependency.cg3  disambiguator.cg3  functions.cg3
src/filters/: Makefile.am  Makefile.am.orig  remove-nom-strings.xfscript  rename-POS_before_Der-tags.regex
src/fst/: Makefile.am  compounding.lexc  missing6freq.txt  phonology.twolc  root.lexc  tags.yaml
src/fst/affixes/: adjectives.lexc  adverbs.lexc  clitics.lexc  nouns.lexc  numbers.lexc  postpositions.lexc  pronouns.lexc  propernouns.lexc  symbols.lexc  verbs.lexc
src/fst/filters/: Makefile.am  make-optional-suffix_order-tags.regex  remove-altorth-tags.regex
src/fst/incoming/: 2text.missing
src/fst/incoming/turku-src/: root.lexc
src/fst/morphology/: Makefile.am  Makefile.modifications-local.am  phonology.twolc  root.lexc
src/fst/morphology/affixes/: pronouns.lexc  propernouns.lexc  symbols.lexc
src/fst/morphology/stems/: acronyms.lexc  adjectives.lexc  adverbs.lexc  dependents.lexc  dependents.xml  interjections.xml  mhr-propernouns.lexc  nouns.lexc  nouns_newwords.lexc  numerals.lexc  particles.lexc  postpositions.lexc  postpositions.xml  propernouns.xml
src/fst/morphology/test/: Makefile.am  generate-adjective-lemmas.sh.in  generate-verb-lemmas.sh.in
src/fst/orthography/: Makefile.am  spellrelax-mobile-keyboard.regex  spellrelax.regex
src/fst/scripts/: urj-mhr-conversion.pl
src/fst/stems/: abbreviations.lexc  conjunctions.lexc  conjunctions.xml  dependents.xml  descriptives.xml  exceptions.lexc  interjections.lexc  interjections.xml  mhr-propernouns.lexc  nouns.lexc  nouns_newwords.lexc  numbers.xml  numerals.lexc  particles.lexc  particles.xml  postpositions.xml  pronouns.lexc  pronouns.xml  propernouns-toponyms.lexc  propernouns-toponyms.xml  propernouns.xml  verbs.lexc
src/fst/test/gt-norm-yamls/: N-arnja_gt-norm.yaml  N-avtorutsj_gt-norm.yaml  N-joertatymash_gt-norm.yaml  N-kid_gt-norm.yaml  N-kogylo_gt-norm.yaml  N-kudo_gt-norm.yaml  N-ky_gt-norm.yaml  N-lym_gt-norm.yaml  N-ola_gt-norm.yaml  N-palto_gt-norm.yaml  N-pasu_gt-norm.yaml  N-poert_gt-norm.yaml  N-pu_gt-norm.yaml  N-rydoe_gt-norm.yaml  N-tengge_gt-norm.yaml  Pron-mo_gt-norm.yaml  V-jytyrajash_gt-norm.yaml  V-kamvozash_gt-norm.yaml  V-kijash_gt-norm.yaml  V-kylash_gt-norm.yaml  V-ludash_gt-norm.yaml  V-mushkash_gt-norm.yaml  V-nelash_gt-norm.yaml  (+2 more)
src/fst/transcriptions/: transcriptor-symbols2text.lexc
src/hyphenation/: hyphenation.xfscript
src/morphology/: Makefile.am  mhr-lex.txt  noun-mhr-lex.txt  pron-mhr-lex.txt  root.lexc  tags.yaml  verb-mhr-lex.txt
src/morphology/affixes/: adjectives.lexc  adverbs.lexc  clitics.lexc  nouns.lexc  numbers.lexc  pronouns.lexc  propernouns.lexc  quantifiers.lexc  verbs.lexc
src/morphology/incoming/: onchyko.missing.freq
src/morphology/stems/: acronyms.lexc  adjectives.lexc  adjectives.xml  adverbs.lexc  adverbs.xml  conjunctions.lexc  conjunctions.xml  dependents.lexc  dependents.xml  descriptives.lexc  descriptives.xml  exceptions.lexc  interjections.lexc  interjections.xml  mhr-propernouns.lexc  nouns.lexc  nouns.xml  numbers.lexc  numbers.xml  numerals.lexc  particles.lexc  particles.xml  postpositions.lexc  postpositions.xml  pronouns.lexc  pronouns.xml  propernouns-toponyms.lexc  propernouns-toponyms.xml  propernouns.lexc  propernouns.xml  punctuation.lexc  quantifiers.lexc  quantifiers.xml  verbs.lexc  verbs.xml  wordToNumeral.lexc
src/orthography/: Latn-to-Cyrl.xfscript  Makefile.am  inituppercase.regex  oldorthography2norm.xfscript  spellrelax-mobile-keyboard.regex  spellrelax.regex  thirties-to-standard.xfscript
src/phonology/: mhr-phon.twolc  mhr-phon.xfscript  und-phon.twolc
src/scripts/: lat2cyr.pl
src/syntax/: dependency.cg3  disambiguation.cg3  disambiguator.cg3  functions.cg3  korp.cg3
src/transcriptions/: numbers.lexc  transcriptor-abbrevs2text.lexc  transcriptor-clock-digit2text.lexc  transcriptor-date-digit2text.lexc  transcriptor-numbers-digit2text.lexc
(+248 files in other folders)
